Fix overlaping label issue (offer titles)

--- a/src/app/main.less
+++ b/src/app/main.less
@@ -75,7 +75,9 @@
     &--photo {
         background-size: cover;
         background-repeat: no-repeat;
-        // font-size: 3em;
+        h1 {
+            line-height: 1.3em;
+        }
         h1, h2, h3 {
             margin: 0;
             padding: 0;
@@ -86,13 +88,7 @@
             }
         }
     }
-    // section.bh-orange &--colored {
-    //     color: @white;
-    // }
     &-row {
-        .tile {
-            // display: inline-block;
-        }
         &:after {
             content: '';
             display: table;
